--- a/src/components/BaseContainer/Card/InfoCard/info.css
+++ b/src/components/BaseContainer/Card/InfoCard/info.css
@@ -22,6 +22,7 @@
   background-size: 1000px;
   border-radius: 16px;
   border: 2px solid var(--primary-color);
+  box-shadow: 0 10px 10px -2px var(--primary-color);
   display: flex;
   flex-direction: column;
   align-items: center;
