--- a/src/components/BaseContainer/base.css
+++ b/src/components/BaseContainer/base.css
@@ -1,5 +1,5 @@
 .base-window {
-  margin: 140px 3.6vw 40px min(max(15vw, calc(120px + 3.6vw)), calc(150px + 3.6vw));
+  margin: 130px 3.6vw 40px min(max(15vw, calc(120px + 3.6vw)), calc(150px + 3.6vw));
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,15 +33,15 @@
 }
 
 .mobile-menu {
-  height: 100%;  
+  height: 100%;
   width: 100%;
   position: fixed;
-  top: 80px; 
+  top: 80px;
   left: 0px;
   overflow: hidden;
-  display: flex; 
+  display: flex;
   flex: none;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 2;
@@ -64,8 +64,8 @@
 .mobile-menu > div > div {
   max-width: 90vw;
   max-height: 100vh;
-  display: flex; 
-  flex-direction: column; 
+  display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 8vw;
   opacity: 0;
@@ -94,13 +94,13 @@
   .base-window {
     margin-left: 30px;
     margin-right: 30px;
-    margin-top: 100px;
+    margin-top: 90px;
   }
 }
 
 @media only screen and (min-width: 1500px) {
   .base-window {
-    margin: 150px 0px 0px 160px;
+    margin: 140px 0px 0px 160px;
   }
 }
 
